sumo/tests/duarouter/flows/errors/vehicle_false_arrivalpos/errors.duarouter
Error: The loader for flows from file 'input_flows.flows.xml' could not be initialised;
 Reason: Invalid arrivalpos definition for vehicle 0.
Quitting (on error).
